--- a/index.html
+++ b/index.html
@@ -84,18 +84,23 @@
 
     <!--"what we do" section-->
     <section id="what-we-do" class="intro">
-        <h2 class="section-title primary-border">What We Do</h2>
+        <div class="flex-row">
+            <h2 class="section-title primary-border">What We Do</h2>
+        </div>
+        <div class="flex-row">
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem numquam obcaecati animi sapiente quae
             recusandae impedit. Officia suscipit asperiores doloribus similique laudantium aperiam? Omnis asperiores
             ipsa error dolorem doloribus expedita.
         </p>
+    </div>
     </section>
 
     <!--"what you do" section-->
     <section id="what-you-do" class="steps">
+        <div class="flex-row"></div>
         <h2 class="section-title secondary-border">What You Do</h2>
-
+        </div>
         <div>
             <img src="./assets/images/step-1.svg" alt="" />
             <h3>Step 1:<span> Fill out the Form Above.</span></h3>
@@ -123,7 +128,9 @@
 
     <!--"meet the trainers" section-->
     <section id="your-trainers" class="trainers">
-        <h2 class="section-title primary-border">Meet The Trainers</h2>
+        <div class="flex-row">
+            <h2 class="section-title primary-border">Meet The Trainers</h2>
+        </div>
         <article class="trainer">
             <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout cloths, ready to pump iron" />
             <div class="trainer-bio text-left">
@@ -167,7 +174,9 @@
 
     <!--"reach out" section-->
     <section id="reach-out" class="contact">
-        <h2 class="section-title secondary-border">Reach Out</h2>
+        <div class="flex-row">
+            <h2 class="section-title secondary-border">Reach Out</h2>
+        </div>
         <div class="contact-info">
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3146.0105900353583!2d-120.42504448440373!3d37.95353870962673!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8090c46e315aaf1b%3A0xb32d2fcd2023b726!2sMain%20St%2C%20Jamestown%2C%20CA%2095327!5e0!3m2!1sen!2sus!4v1643078841671!5m2!1sen!2sus"
