--- a/index.html
+++ b/index.html
@@ -64,16 +64,21 @@
 
                 <p>
                     Have you worked out with a trainer before?
-                    <input type="radio" name="trainer-confirm" id="trainer-yes" />
-                    <label for="trainer-yes">Yes</label>
-
-                    <input type="radio" name="trainer-confirm" id="trainer-no" />
-                    <label for="trainer-no">No</label>
+                    <span class="radio-wrapper">
+                        <input type="radio" name="trainer-confirm" id="trainer-yes" />
+                        <label for="trainer-yes">Yes</label>
+                    </span>
+                    <span class="radio-wrapper">
+                        <input type="radio" name="trainer-confirm" id="trainer-no" />
+                        <label for="trainer-no">No</label>
+                    </span>
                 </p>
 
                 <p>
-                    <label for="checkbox">I acknowledge that I am at least 18 years of age</label>
-                    <input type="checkbox" name="yes-box" id="checkbox" />
+                    <span class="checkbox-wrapper">
+                        <label for="checkbox">I acknowledge that I am at least 18 years of age</label>
+                        <input type="checkbox" name="yes-box" id="checkbox" />
+                    </span>
                 </p>
                 <button type="submit">
                     Get running!
